--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "closevector-react",
-  "version": "0.1.0-alpha.1",
+  "version": "0.1.0-alpha.2",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "prepublishOnly": "npm run build",
     "build": "tsc",
